Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.3, 6.9.0
-
-
21f3364c0 (dev), f813496af (6.10), e0b94ca97 (6.9), 373ef23a8 (tqtc/lts-6.8)
Description
When using QAbstractItemView::setIndexWidget() with the windowsvista or Fusion styles, the underlying content remains visible. However, with the Windows11 style, the underlying content is not visible when an index widget is used.
To reproduce the issue, run the attached example project:
int main(int argc, char **argv) { QApplication a(argc, argv); QStringListModel model; model.setStringList({"test"}); QListView view; view.setModel(&model); view.setWindowTitle("style: " + a.style()->name()); view.setIndexWidget(model.index(0, 0), new QWidget); view.show(); return a.exec(); }
Attachments
Issue Links
- resulted from
-
QTBUG-119501 Numbers colliding and not highlighted in Charts with Widgets Gallery example
-
- Closed
-
For Gerrit Dashboard: QTBUG-136217 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
642087,7 | Windows11Style: draw item text unconditionally | dev | qt/qtbase | Status: MERGED | +2 | 0 |
657766,2 | Windows11Style: draw item text unconditionally | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
657822,2 | Windows11Style: draw item text unconditionally | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
658005,3 | Windows11Style: draw item text unconditionally | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |