Windows11Style: draw item text unconditionally

5d590a38d96206bcf5ad6ffe2b156223dc909fd7 made the drawing of the
itemview text dependent whether there is an editor or not. This is in
contrast to all other styles and also no longer needed because now the
editor properly paints it's background.

Merge conflict resolution for 6.8:
- Port back highlightCurrent boolean from 6.10
- Add qobject_cast of widget in highlighting branch

Fixes: QTBUG-136217
Task-number: QTBUG-119501
Change-Id: I84f64e71010d1a3d77949dee78426565252bed34
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>
(cherry picked from commit 21f3364c06f9ea03be7c29de90b4fbf9eb26425b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit f813496afc06ac981a491572fc177c5a05e46b1f)
(cherry picked from commit e0b94ca97c84722b03ce9db2de40f6b1a6927fb5)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>